--- a/alarino_backend/migrations/README
+++ b/alarino_backend/migrations/README
@@ -1,1 +1,11 @@
 Single-database configuration for Flask.
+
+#### Database setup
+```
+# export FLASK_APP=main
+# flask --app=main.app routes
+# flask --app=main.app db init - only run once to setup the actual database
+# flask --app=main.app db migrate -m "commit message"
+# flask --app=main.app db upgrade
+
+```
